# RustGame

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Mechanics.md
.claude/agents/: compat-tester.md
assets/abilities/: abomination_limb.ability.ron  amz.ability.ron  blood_boil.ability.ron  bloom.ability.ron  brute_contact.ability.ron  companion.ability.ron  companion_attack.ability.ron  consecrated_ground.ability.ron  dash.ability.ron  death_strike.ability.ron  dnd.ability.ron  dnd.ron  ent_attack.ability.ron  ferocious_bite.ability.ron  fireblast.ability.ron  flamestrike.ability.ron  flamewrath.ability.ron  flash_of_light.ability.ron  frost_impale.ability.ron  frostbolt.ability.ron  grunt_contact.ability.ron  hammer_of_justice.ability.ron  heal.ability.ron  heart_strike.ability.ron  primal_pounce.ability.ron  purgatory.ability.ron  roots.ability.ron  runner_contact.ability.ron  scratch.ability.ron  smite.ability.ron  spawn_ent.ability.ron  spinning_hammer.ability.ron  spitter_bolt.ability.ron  tree_conduit.ability.ron  warlord_smash.ability.ron
assets/enemies/: brute.enemy.ron  grunt.enemy.ron  grunt_placeholder.ron  runner.enemy.ron  spitter.enemy.ron  warlord.enemy.ron
assets/heroes/: blood_death_knight.hero.ron  blood_death_knight.ron  druid.hero.ron  mage.hero.ron  paladin.hero.ron
assets/room_modifiers/: enemies_deal_double_damage.ron  no_regen.ron  player_slowed.ron
assets/status_effects/: blaze.ron  blaze.status.ron  bleed.ron  bleed.status.ron  (+12 more)
docs/: architecture-plan.md  phase3-plan.md  phase4-plan.md  phase5-plan.md  phase6-plan.md  phase7-plan.md  phase7.5-ui-plan.md  phase8-plan.md  phase9-plan.md  testing.md
src/: constants.rs  lib.rs  main.rs
tests/: abomination_limb.rs  act_graph.rs  amz_talents.rs  autocast.rs  bdk_class_passives.rs  blood_boil_talents.rs  bone_shield.rs  charges.rs  combat.rs  companion.rs  druid.rs  encounter.rs  enemy.rs  forced_movement.rs  freeze.rs  game_flow.rs  golden_campaign.rs  harness.rs  heart_strike.rs  hero_stance.rs  mage.rs  merchant.rs  meta.rs  movement.rs  paladin.rs  persistence.rs  progression_flow.rs  projectile.rs  purgatory.rs  shields.rs  status.rs  world_pickups.rs  zone.rs
(+282 files in other folders)
